## Process this file with automake to produce Makefile.in

EXTRA_DIST = FAQ Install-FAQ MMX.txt README.fixbm README.netplay	\
README.ptcomp discord.txt dumblogo.ppm keymap.txt linux-libc5.txt	\
log-classes params.txt xrosella.xpm todo.texinfo .cvsignore

SUBDIRS = dos maint patches

info_TEXINFOS = dumb-pt.texinfo
# This doesn't seem to add the file in the distribution.
# noinst_TEXINFOS = todo.texinfo

# TODO: Install some more documents.
#
# Files which should NOT be installed:
#
# File                  What it's about
# ----                  ---------------
# Install-FAQ           Installing DUMB
# configure.txt         Configuration before compilation
# linux-libc5.txt       Compiling for Linux libc.so.5
